// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert> matches snapshot 1`] = `
<div>
  <div
    class="css-k5zh3p-container-container"
  >
    <div
      class="icon"
      data-testid="icon"
    >
      <svg-file-stub
        height="56"
      />
    </div>
    <article>
      <h3
        class="css-1iyd91n-headingContainer-headingContainer"
      >
        Welcome
      </h3>
      <p>
        My content!
      </p>
    </article>
    <button
      aria-label="Close alert"
      class="close-btn"
    >
      <svg-file-stub
        height="32"
      />
    </button>
  </div>
</div>
`;

exports[`<Alert> matches snapshot with custom icon 1`] = `
<div>
  <div
    class="css-k5zh3p-container-container"
  >
    <svg-file-stub
      classname="icon"
      data-testid="icon"
      height="56"
    />
    <article>
      <p>
        My content!
      </p>
    </article>
    <button
      aria-label="Close alert"
      class="close-btn"
    >
      <svg-file-stub
        height="32"
      />
    </button>
  </div>
</div>
`;
